[gd_scene load_steps=12 format=2]

[ext_resource path="res://Cards/Card.gd" type="Script" id=1]
[ext_resource path="res://Cards/CardFrames/CardFrame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Cards/CardGUI/CardDefense-1.png.png" type="Texture" id=4]
[ext_resource path="res://Cards/CardGUI/CardAttack.png" type="Texture" id=5]
[ext_resource path="res://Cards/ComboSprite.gd" type="Script" id=6]
[ext_resource path="res://Cards/ComboSprites/leftAdj.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="CardFrame" parent="." instance=ExtResource( 2 )]
scale = Vector2( 2, 2 )

[node name="CardArt" type="AnimatedSprite" parent="CardFrame"]
position = Vector2( 0, -2.40001 )
scale = Vector2( 1, 1.35 )
frames = SubResource( 1 )

[node name="CardArtAnimationPlayer" type="AnimationPlayer" parent="CardFrame/CardArt"]

[node name="CardAttack" type="TextureRect" parent="CardFrame"]
modulate = Color( 1, 0.631373, 0.631373, 1 )
margin_left = 17.2308
margin_top = 31.2
margin_right = 57.2308
margin_bottom = 71.2
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardAttackText" type="RichTextLabel" parent="CardFrame/CardAttack"]
margin_left = 7.0
margin_top = 12.0
margin_right = 34.0
margin_bottom = 36.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDefense" type="TextureRect" parent="CardFrame"]
modulate = Color( 0.54902, 0.694118, 1, 1 )
margin_left = -36.9231
margin_top = 31.2
margin_right = 3.07692
margin_bottom = 71.2
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDefenseText" type="RichTextLabel" parent="CardFrame/CardDefense"]
margin_left = 3.0
margin_top = 13.0
margin_right = 38.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="RichTextLabel" parent="CardFrame"]
visible = false
margin_left = -25.0
margin_top = 14.0
margin_right = 25.0
margin_bottom = 41.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Hello"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboSprite" type="Sprite" parent="CardFrame"]
position = Vector2( 0, 28 )
texture = ExtResource( 7 )
script = ExtResource( 6 )
